# homework27_django

./: db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
avito/: settings.py  urls.py
data/: csv_to_json.py
