[tool.poetry]
name = "homework27-django"
version = "0.1.0"
description = ""
authors = ["kuriv <zayac0071@mailru>"]
readme = "README.md"
packages = [{include = "homework27_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
